syntax = "proto3";
package delivery;
import "delivery/shared.proto";

message UpsertProjectionDataRequest {
	string projection = 1;
	AuthData auth = 2;
	string data_id = 3;
	map<string, string> payload = 4;
	EventMetadata eventMetadata = 5;
}

message UpsertProjectionDataResponse {
	map<string, string> newData = 1;
	string id = 2;
	repeated string validationErrors = 3;
	map<string, string> fieldValidationErrors = 4;
}


